<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.jetfile</groupId>
	<artifactId>JetFileTransfer</artifactId>
	<version>JetFileTransfer-v1.0</version>
	<packaging>jar</packaging>

	<name>JetFileTransfer</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mainClass>com.mycompany.filetransferwithui.MainApp</mainClass>
		<maven.compiler.release>17</maven.compiler.release>
		<javafx.version>17.0.12</javafx.version>
		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
		<javafx.platform>linux</javafx.platform>
		<app.name>JetFileTransfer</app.name>
	</properties>

	<organization>
		<name>MEK</name>
	</organization>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<profiles>
		<profile>
			<id>linux-os</id>
			<activation>
				<os>
					<family>unix</family>
					<name>Linux</name>
				</os>
			</activation>
			<properties>
				<javafx.platform>linux</javafx.platform>
			</properties>
		</profile>
		<profile>
			<id>mac-aarch64-os</id>
			<activation>
				<os>
					<family>mac</family>
					<arch>aarch64</arch>
				</os>
			</activation>
			<properties>
				<javafx.platform>mac-aarch64</javafx.platform>
			</properties>
		</profile>
		<profile>
			<id>mac-x86-os</id>
			<activation>
				<os>
					<family>mac</family>
					<arch>x86_64</arch>
				</os>
			</activation>
			<properties>
				<javafx.platform>mac</javafx.platform>
			</properties>
		</profile>
		<profile>
			<id>windows-os</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<properties>
				<javafx.platform>win</javafx.platform>
			</properties>
		</profile>
	</profiles>

	<build>
		<finalName>${app.name}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>${maven.compiler.release}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>${mainClass}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.7.1</version>
				<executions>
					<execution>
						<id>copy-runtime-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<includeScope>runtime</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>${javafx.maven.plugin.version}</version>
				<configuration>
					<mainClass>${mainClass}</mainClass>
					<options>
						<option>--enable-native-access=javafx.graphics</option>
						<option>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</option>
						<option>--add-opens=java.base/java.lang=ALL-UNNAMED</option>
						<option>--add-opens=java.base/java.text=ALL-UNNAMED</option>
						<option>--add-opens=java.desktop/java.awt.font=ALL-UNNAMED</option>
						<option>--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED</option>
						<option>--add-opens=java.desktop/java.awt.desktop=ALL-UNNAMED</option>
					</options>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
			<classifier>${javafx.platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
			<classifier>${javafx.platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>${javafx.version}</version>
			<classifier>${javafx.platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>${javafx.version}</version>
			<classifier>${javafx.platform}</classifier>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.1</version>
		</dependency>
		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>9.0.10</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.5</version>
		</dependency>
		<dependency>
			<groupId>com.github.PlusHaze</groupId>
			<artifactId>TrayNotification</artifactId>
			<version>5393</version>
		</dependency>
	</dependencies>

</project>
